# PythonScriptPlugin

./: PythonPluginNew.uplugin
Binaries/Win64/: UnrealEditor.modules
Content/Python/: test_type_hints.py  test_wrapper_types.py
Content/Python/Lib/: Packaging_v23.1.tps  pip-requirements-parser_v32.0.1.tps  pyparsing_v3.1.1.tps  wheel_v0.38.4.tps
Content/Python/PipInstallUtils/: package_utils.py  requirements.txt
Content/Python/PipInstallUtils/ue-pipinstall-utils/: README.rst  setup.cfg  setup.py
Source/PythonAutomation/: PythonAutomation.Build.cs
Source/PythonAutomation/Private/: S_PythonAutomationModule.cpp  S_UEPyFAutomationEditorCommonUtils.cpp  S_UEPyFAutomationEditorCommonUtils.h
Source/PythonConsole/: PythonConsole.Build.cs
Source/PythonConsole/Private/: S_PyFbxFactory.cpp  S_PythonConsoleModule.cpp  S_PythonScriptFactory.cpp  S_SPythonConsole.cpp  S_SPythonConsole.h  S_SPythonLog.cpp  S_SPythonLog.h
Source/PythonConsole/Public/: S_PyFactory.h  S_PyFbxFactory.h  S_PythonScriptFactory.h
Source/PythonEditor/: PythonEditor.Build.cs
Source/PythonEditor/Private/: S_DirectoryScanner.cpp  S_DirectoryScanner.h  S_PYRichTextSyntaxHighlighterTextLayoutMarshaller.cpp  S_PYRichTextSyntaxHighlighterTextLayoutMarshaller.h  S_PythonEditor.cpp  S_PythonEditorCustomization.cpp  S_PythonEditorCustomization.h  S_PythonEditorStyle.cpp  S_PythonProject.cpp  S_PythonProject.h  S_PythonProjectEditor.cpp  S_PythonProjectEditorCommands.cpp  (+12 more)
Source/PythonPluginNew/: PythonPluginNew.Build.cs
Source/PythonPluginNewPreload/: PythonPluginNewPreload.Build.cs
(+438 files in other folders)
