[metadata]
name = ue-pipinstall-utils
# NOTE: This version must also be updated in PipInstallMode.cs and PipInstall.cpp
version = 0.1.5
description = Utilities for using pip to install Unreal plugin python dependencies
long_description = file: README.rst, LICENSE.rst
license = proprietary
classifiers =
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    =src
packages = find:
include_package_data = true
py_modules =
    ue_parse_plugin_reqs
    ue_py_license_check
zip_safe = false

python_requires = >=3.7

install_requires =
    pip-requirements-parser

[options.packages.find]
where = src
